fixing white space

--- a/style_sheet copy.css
+++ b/style_sheet copy.css
@@ -77,6 +77,9 @@ section {
     margin-right: 0pt;
   }
 
+.image{
+  width:100%;
+}
 .flex-container > div {
     display:inline-flex;
     direction:row;
